--- a/index.ipynb
+++ b/index.ipynb
@@ -300,20 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-286b309c0107>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-286b309c0107>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    in(\"7285553334\")+1 # 7285553335\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "in(\"7285553334\") +1 # 7285553335"
+    "int(\"7285553334\") + 1 # 7285553335"
    ]
   },
   {
